--- a/styles.css
+++ b/styles.css
@@ -13,26 +13,28 @@ header {
     justify-content: center;
     align-items: center;
     display: flex;
-    
-    
 }
 
 .menu {    
     width: 80%;
+    height: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
-    border-bottom: 1px solid hsl(223, 64%, 98%);
-    padding: 48px
+    flex-direction: row;
+    border-bottom: 1px solid hsl(223, 64%, 98%);   
 }
 
 .top-menu {
     list-style: none;  
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
+    padding-left: 32px;
 }
 
 #logo {
     height: 22px;
+    margin-left: 0;
 }
 
 li {
@@ -44,10 +46,56 @@ li {
     text-align: right;
     justify-content: center;
     align-items: center;
-    padding-left: 25%;
+    margin-left: 40%;
 }
 
 #avatar-img {
     height: 48px;
     padding-left: 32px;
 }
+
+main {
+    width: 100vw;
+    height: 100vh;
+    background-color: blueviolet;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.images-box {
+    width: 30%;
+    height: 35%;
+    background-color: aqua;
+}
+
+.text-box {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: left;
+    margin-left: 10%
+}
+
+/* responsiveness settings */
+
+/* desktop */
+@media only screen and (max-width: 1200px) {
+  .account-buttons {
+    margin-left: 25%;
+  }
+}
+
+/* tablet */
+@media only screen and (max-width: 980px) {
+  .account-buttons {
+    margin-left: 8%;
+  }
+}
+
+/* smartphone */ 
+@media only screen and (max-width: 470px) {
+  .class {
+    font-size: 2rem;
+  }
