--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ header {
 
 li {
     padding-left: 32px;
+    cursor: pointer;
 }
 
 .account-buttons {
@@ -50,9 +51,14 @@ li {
     margin-left: 40%;
 }
 
+#button-cart {
+    cursor: pointer;
+}
+
 #avatar-img {
     height: 48px;
     padding-left: 32px;
+    cursor: pointer;
 }
 
 main {
@@ -84,6 +90,7 @@ figure {
 #featured-image {
     width: 100%;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 .other-pictures {
@@ -98,7 +105,106 @@ figure {
     padding: 0;
     margin: 0;
     border-radius: 10px;
+    cursor: pointer;
 }
+
+#company-name {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: small;
+    letter-spacing: 0.10em;
+    color: hsl(26, 100%, 55%);
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+h1 {
+    color: hsl(220, 13%, 13%);
+    letter-spacing: 0.05em;
+}
+
+.prices {
+    display: flex;
+    flex-direction: column;
+}
+
+.current-price {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#discount-price {
+    color: hsl(220, 13%, 13%);
+    font-size: 24px;
+    font-weight: 600;
+}
+
+#discount {
+    color: hsl(26, 100%, 55%);
+    margin-left: 24px;
+    font-weight: 800;
+}
+
+#price-without-discount {
+    margin-top: 8px;
+    font-weight: 700;
+}
+
+.btn-box {
+    display: flex;
+    margin-top: 32px;
+}
+
+.counter-box {
+    background-color: hsl(223, 64%, 98%);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width:fit-content;
+    height: 56px;
+    border-radius: 10px;
+}
+
+#button-minus {
+    width: 16px;
+    height: 6px;
+    padding: 0 16px;  
+    cursor: pointer;  
+}
+
+#button-plus {
+    width: 16px;
+    padding: 0 16px;
+    cursor: pointer;
+}
+
+#counter {
+    color:hsl(220, 13%, 13%);
+    padding: 0 32px;
+}
+
+.main-btn {
+    width: 300px;
+    height: 56px;
+    background-color: hsl(26, 100%, 55%);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    color: white;
+    box-shadow: 0 16px 50px hsl(25, 100%, 94%);
+    margin-left: 16px;
+    cursor: pointer;
+}
+
+#white-cart {
+    width: 18px;
+    height: 16px;
+    padding-right: 16px;
+}
+
 
 /* responsiveness settings */
 
