--- a/styles.css
+++ b/styles.css
@@ -87,12 +87,6 @@ figure {
     padding: 0;
 }
 
-#featured-image {
-    width: 100%;
-    border-radius: 15px;
-    cursor: pointer;
-}
-
 .other-pictures {
     display: flex;
     width: 400px;
@@ -203,6 +197,22 @@ h1 {
     width: 18px;
     height: 16px;
     padding-right: 16px;
+}
+
+#bg {
+    width: 100%;;
+    height: 100%;
+    top: 0;
+    left:0;
+    background-color: rgba(0,0,0,.8);
+    position: fixed;
+}
+
+#current-image {
+    position: absolute;
+    z-index: 1;
+    height: 200px;
+
 }
 
 
