--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,14 @@ main {
 figure {
     margin: 0;
     padding: 0;
+    width: 500px;
+    height: 500px;
+}
+
+#featured-image {
+    width: 100%;
+    border-radius: 15px;
+    cursor: pointer;
 }
 
 .other-pictures {
@@ -197,22 +205,6 @@ h1 {
     width: 18px;
     height: 16px;
     padding-right: 16px;
-}
-
-#bg {
-    width: 100%;;
-    height: 100%;
-    top: 0;
-    left:0;
-    background-color: rgba(0,0,0,.8);
-    position: fixed;
-}
-
-#current-image {
-    position: absolute;
-    z-index: 1;
-    height: 200px;
-
 }
 
 
