--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,33 @@ main {
     display: flex;
 }
 
-.images-box {
-    width: 400px;
+.container-grid {    
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#featured-image {
+    width: 100%;
+    height: 45vh;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+.other-pictures {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 32px;
+}
+
+.small-pictures {
+    height: 90px;
+    padding: 0;
+    margin: 0;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 .text-box {
@@ -80,34 +105,6 @@ main {
     justify-content: space-around;
     text-align: left;
     margin-left: 10%
-}
-
-figure {
-    margin: 0;
-    padding: 0;
-    width: 500px;
-    height: 500px;
-}
-
-#featured-image {
-    width: 100%;
-    border-radius: 15px;
-    cursor: pointer;
-}
-
-.other-pictures {
-    display: flex;
-    width: 400px;
-    justify-content: space-between;
-    margin-top: 32px;
-}
-
-.small-pictures {
-    height: 80px;
-    padding: 0;
-    margin: 0;
-    border-radius: 10px;
-    cursor: pointer;
 }
 
 #company-name {
