--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,35 @@ h1 {
     .account-buttons {
         margin-left: 8%;
     }
+    
+    .container-grid {    
+        height: 60vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #featured-image {
+        width: 100%;
+        height: 20vh;
+        border-radius: 15px;
+        cursor: pointer;
+    }
+
+    .other-pictures {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        margin-top: 32px;
+    }
+
+    .small-pictures {
+        height: 90px;
+        padding: 0;
+        margin: 0;
+        border-radius: 10px;
+        cursor: pointer;
+    }
 }
 
 /* smartphone */ 
